--- a/index.html
+++ b/index.html
@@ -5,8 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body{
+            background-color: black;
+            color: aliceblue;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            text-align: center;
+
+        }
+
+        #teste{
+            border: 1px solid white;
+            border-radius: 20px;
+
+        }
+        
+    </style>
 </head>
 <body>
     <h1>hello world!</h1>
+    <div id="teste">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae ex quis perspiciatis aliquam, consequatur consequuntur unde esse explicabo est ea, delectus mollitia temporibus eos suscipit earum eveniet architecto consectetur reiciendis!
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni debitis excepturi ex natus libero porro quam unde veniam quia maiores? Vero aliquam facere temporibus perferendis iure repudiandae cumque voluptates officia.
+        </p>
+    </div>
 </body>
 </html>
