--- a/index.html
+++ b/index.html
@@ -1,41 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        body{
-            background-color: black;
-            color: aliceblue;
-            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            text-align: center;
-
-        }
-
-        #teste{
-            border: 1px solid white;
-            border-radius: 20px;
-
-        }
-        
-    </style>
+    <title>Musicas de Cauã</title>
 </head>
 <body>
-    <h1>hello world!</h1>
-    <div id="teste">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae ex quis perspiciatis aliquam, consequatur consequuntur unde esse explicabo est ea, delectus mollitia temporibus eos suscipit earum eveniet architecto consectetur reiciendis!
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni debitis excepturi ex natus libero porro quam unde veniam quia maiores? Vero aliquam facere temporibus perferendis iure repudiandae cumque voluptates officia.
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. A voluptatem odio quas temporibus sunt voluptas dolores fugiat qui quod quaerat possimus fugit provident, similique accusamus facilis laborum hic reprehenderit! Optio?
-        </p>
-        <h2>teste 3</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur animi, repellendus saepe alias minus nostrum? Omnis dolorem facilis fugit labore modi distinctio nostrum sed, maiores deleniti illo rem mollitia porro!</p>
-        <h4>teste 4</h4>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore ut deserunt rem unde aliquid dicta numquam? Rem ipsam, tenetur et veniam, illo harum voluptatibus obcaecati, quas itaque maiores doloremque consectetur?
-
-         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, tenetur illum. Rem corrupti et debitis minus quisquam! Recusandae distinctio ipsam fuga repudiandae, exercitationem commodi, error neque veritatis, officia accusantium dolores!   
-        </p>
-    </div>
+    <h1> O mamador de bolas </h1>
+    <p>Eu sou um cara que tem sorte o <em>mamador de bolas</em> amo todos os os inimigos até os de pika grossa
+        <strong>eu sou gay</strong>, ele mama tudo, pau gay, e eu assumo, se vc quer mamar então cai de boca na pika e se vc não mamar
+        vai dar briga, meu pau tá muito duro, já da pra reparar, vai gritar uou quando na pika vc sentar.
+    </p>
+     <h2> Quero pika </h2>
+     <p>Então que venha a goza quente, mamar duas é diferente, por isso eu sigo mamando uma duas cinco varas
+        falam que literalmente eu to com a porra na cara </p>.
+        <h3><a href="#">Eu mostrei o meu pinto</a></h3>
+        <p>Eu quero lhe fazer gozar depois eu te explico como isso funciona.</p>
 </body>
 </html>
