--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 quaerat nihil quis atque placeat, possimus numquam itaque quo excepturi aut
                  consequuntur nesciunt, quidem quisquam, aspernatur quibusdam?</p>
         <img src="download.jpg" alt="pikachu">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed nihil mollitia laudantium minima reiciendis. Consequuntur, deleniti magnam? Velit cumque soluta quod vel ea accusamus! Perspiciatis labore dignissimos voluptas delectus suscipit!</p>
             
            
 
